# SED_Hospital_Engine

./: .env.example  README.md  main.py  plan.md  pyproject.toml
app/api/: auth.py  beds.py  hospitals.py  reservations.py  search.py  vapi.py  wards.py  websocket.py
app/core/: config.py  deps.py  security.py  session.py
app/db/: mongodb.py
app/models/: bed.py  hospital.py  refresh_token.py  reservation.py  user.py  ward.py
app/schemas/: bed.py  hospital.py  reservation.py  search.py  user.py  ward.py
app/services/: auth.py  hospital.py  mapbox.py  reservation.py  search.py  vapi_tools.py  ward.py
app/workers/: expiry.py
